[package]
name = "mailgun_api"
version = "0.0.1"
description = "Api for Mailgun"
authors = ["Francisco Jesus Navarro Cortes <spieljs@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/spielrs/mailgun_api"
categories = ["email", "asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
