[package]
name = "mailgun_api"
version = "0.1.1"
description = "Api for Mailgun in rust"
documentation = "https://docs.rs/crate/mailgun_api"
authors = ["Francisco Jesus Navarro Cortes <spieljs@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/spielrs/mailgun_api"
readme = "README.md"

categories = ["email", "asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10", features = ["json"]}
serde = { version = "1.0", features = ["derive"]}
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"]}
dotenv = "0.15"